# wavy

./: .gitmodules  CMakeLists.txt  CONTRIBUTORS  LICENSE  Makefile  README.md  ford.md
docs/: index.html  search.html
docs/interface/: advectcentered2ndorder.html  advectupwind1storder.html  backward_euler.html  diff.html  diff_periodic.html  domain_type.html  exact_exponential.html  forward_euler.html  grid_type.html  integrate.html  ones.html  range.html  spectrum_type.html  tile.html  zeros.html
docs/lists/: files.html  modules.html  procedures.html  types.html
docs/module/: mod_advection.html  mod_const.html  mod_domain.html  mod_gravity.html  mod_grid.html  mod_io.html  mod_linear_wave_theory.html  mod_nondimensional.html  mod_precision.html  mod_source_functions.html  mod_spectral_shapes.html  mod_spectrum.html  mod_stokes.html  mod_time_integration.html  mod_utility.html
docs/proc/: advect1drank1.html  advect1drank2.html  advect2drank2.html  advectcentered2ndorder1drank0.html  advectcentered2ndorder1drank1.html  advectcentered2ndorder1drank2.html  advectcentered2ndorder2drank0.html  advectcentered2ndorder2drank1.html  advectcentered2ndorder2drank2.html  advectupwind1storder1drank0.html  advectupwind1storder1drank1.html  advectupwind1storder1drank2.html  advectupwind1storder2drank0.html  advectupwind1storder2drank1.html  advectupwind1storder2drank2.html  assign_array_1d.html  assign_array_2d.html  assign_spectrum_array_1d.html  assign_spectrum_array_2d.html  backward_euler_domain.html  backward_euler_spectrum.html  constructor.html  constructor_1d.html  constructor_2d.html  constructor~2.html  diff_1d.html  diff_2d.html  diff_periodic_1d.html  diff_periodic_2d.html  domain_add_domain.html  domain_add_real.html  domain_div_domain.html  domain_div_real.html  domain_mult_domain.html  domain_mult_real.html  domain_sub_domain.html  domain_sub_real.html  domain_unary_minus.html  donelanhamiltonhui.html  donelanhamiltonhuidirectionalspectrum.html  (+180 more)
docs/sourcefile/: mod_advection.f90.html  mod_const.f90.html  mod_domain.f90.html  mod_gravity.f90.html  mod_grid.f90.html  mod_io.f90.html  mod_linear_wave_theory.f90.html  mod_nondimensional.f90.html  mod_precision.f90.html  mod_source_functions.f90.html  mod_spectral_shapes.f90.html  mod_spectrum.f90.html  mod_stokes.f90.html  mod_time_integration.f90.html  mod_utility.f90.html
docs/src/: mod_advection.f90  mod_const.f90  mod_domain.f90  mod_gravity.f90  mod_linear_wave_theory.f90  mod_nondimensional.f90  mod_precision.f90  mod_source_functions.f90
docs/tipuesearch/: tipuesearch_content.js
docs/type/: domain_type.html  grid_type.html  spectrum_type.html
src/cli/: Makefile  wavy-cli.f90
src/examples/: spectrum_directional.f90  spectrum_jonswap.f90  spectrum_omnidirectional.f90  umwm_1d.f90
src/lib/: mod_aerodynamic_drag.f90  mod_grid.f90  mod_io.f90  mod_spectral_shapes.f90  mod_spectrum.f90  mod_stokes.f90  mod_time_integration.f90  mod_utility.f90
src/tests/integration/: test_advection.f90  test_advection_2d.f90  test_dhh.f90  test_dhh_directional.f90  test_jonswap.f90  test_phillips.f90  test_pierson_moskowitz.f90  test_time_integration_domain.f90  test_time_integration_spectrum.f90
src/tests/unit/: mod_testing.f90  test_domain.f90  test_grid.f90  test_json.f90  test_spectrum.f90  (+1 more)
